# ur_onrobot

./: .gitignore  LICENSE  README.md
ur_onrobot/: CMakeLists.txt  package.xml
ur_onrobot/launch/: bringup_compute_box.launch  bringup_tool_io.launch  ur3e_rg_bringup.launch  ur_onrobot_rg_bringup.launch
ur_onrobot_description/: CMakeLists.txt  package.xml
ur_onrobot_description/cfg/: view_robot.rviz
ur_onrobot_description/launch/: load_ur3_onrobot_rg2.launch  load_ur3e_onrobot_rg2.launch  load_ur3e_onrobot_rg6.launch  load_ur5e_onrobot_rg2.launch  load_ur5e_onrobot_rg6.launch  load_ur_onrobot.launch  view_ur_onrobot.launch
ur_onrobot_description/urdf/: onrobot_rg2_gazebo_finger_width.xacro  onrobot_rg2_transmission_finger_width.xacro  standalone_onrobot_rg2.xacro  standalone_onrobot_rg2_model_macro.xacro  standalone_onrobot_rg6.xacro  standalone_onrobot_rg6_model_macro.xacro  ur_onrobot.xacro  ur_onrobot_macro.xacro
ur_onrobot_gazebo/: CMakeLists.txt  package.xml
ur_onrobot_gazebo/config/: ur_onrobot_gazebo_controllers.yaml
ur_onrobot_gazebo/launch/: ur_onrobot_gazebo_bringup.launch  ur_onrobot_gazebo_control.launch.xml
ur_onrobot_gazebo/launch/inc/: load_ur3e_onrobot_rg2_gazebo.launch  load_ur_onrobot_gazebo.launch  ur_onrobot_gazebo.xacro
ur_onrobot_moveit_config/: CMakeLists.txt  package.xml
ur_onrobot_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml  ur_onrobot.srdf.xacro  ur_onrobot_macro.srdf.xacro
ur_onrobot_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  planning_context.launch  trajectory_execution.launch.xml  ur_onrobot_moveit_controller_manager.launch.xml
ur_onrobot_rg_control/: CMakeLists.txt  package.xml  setup.py
ur_onrobot_rg_control/config/: rg_controllers.yaml
ur_onrobot_rg_control/include/ur_onrobot_rg_control/: ur_onrobot_rg_hw_interface.h
ur_onrobot_rg_control/launch/: bringup_rg.launch  bringup_rg_serial.launch  bringup_rg_tcp.launch  bringup_serial_server.launch
ur_onrobot_rg_control/nodes/: MessageBridge.py  OnRobotRGJointPositionControllerServer.py  OnRobotRGSerialNode.py  ur_onrobot_rg_control.cpp
ur_onrobot_rg_control/src/: ur_onrobot_rg_hw_interface.cpp
ur_onrobot_rg_modbus_serial/: CMakeLists.txt  package.xml  setup.py
ur_onrobot_rg_modbus_serial/src/ur_onrobot_rg_modbus_serial/: comModbusSerial.py
