<?xml version="1.0"?>
<package format="3">
  <name>ur_onrobot_rg_modbus_serial</name>
  <version>1.0.0</version>
  <description>A stack to communicate with OnRobot RG grippers using the Modbus Serial protocol, for use with Universal Robot e-Series' RS-485 Tool Communication</description>
  <maintainer email="tonyle98@outlook.com">Tony Le</maintainer>
  <author email="tonyle98@outlook.com">Tony Le</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
